fix todo thumbnail alignment in the media query

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -161,6 +161,7 @@ div.info li::before {
     #todo-list-content {
         flex-direction: row;
         justify-content: center;
+        align-items: flex-start;
     }
 
     .todo-thumbnail {
